--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
             <form name="leave_message">
                 <div>
                 <label id ="label" for="name">Name:</label>
-                <input type="text" name="name" id="name">
+                <input type="text" name="name" id="name" required >
                 </div>
 
                 <div>
                 <label id="label" for="email">Email:</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
                 </div>
 
                 <div>
                 <label id="label" for="message">Enter message here...</label>
-                <input type="text" name="message" id= "message">
+                <textarea class="field_input" name="message" id= "message" required></textarea>
                 </div>
 
                 <div>
-                <button id="submit" type"button">Submit</button>
+                <button id="submit" type="submit">Submit</button>
                 </div>
             </form>
         </section>
         
         <section>
-            <h2>Messages</h2>
+            <h2 id = "messages">Messages</h2>
             <ul id="message-list"></ul>
         </section>
           
