--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#connect">Contact</a></li>
     </ul>
 </nav>
@@ -32,6 +33,10 @@
 
         <section class="sections" id="skills"><h2>Skills</h2>
             <p><ul id = "skills-list"> </ul></p>
+         </section>
+
+         <section class="sections" id="projects"><h2>Projects</h2>
+            <p><ul id = "projects-list"> </ul></p>
          </section>
 
         <section class="sections" id="connect"><h2>Contact me</h2>
@@ -67,7 +72,12 @@
             <h2 id = "messages">Messages</h2>
             <ul id="message-list"></ul>
         </section>
-    </main>    
+    </main>   
+    <nav>
+        <ul class="nav_links">
+            <li><a href="#my-name">Return to top</a></li>
+            </ul>
+    </nav>
         <footer id="footer"></footer> 
            
     <script src="index.js" ></script>      
