--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
          </section>
 
         <section class="sections" id="connect"><h2>Contact me</h2>
-           <p>Email: mariolarios1522@gmail.com 
-               <br>Git: @mariolarios</p>
+           <br> <a href="mailto:mariolarios1522@gmail.com">mariolarios1522@gmail.com</a>
+          <br>  <a href="https://github.com/mariolarios">GitHub</a>
         </section>
        
         <section>
